# tp-lab08

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
solver_application/: CMakeLists.txt  Dockerfile  equation.cpp
